--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -325,7 +325,7 @@ git config --global credential.helper store
 
 ### # 常见问题
 
-```markdown
+```shell
 # git remote: HTTP Basic: Access denied
 -- 原因
 本地git配置的用户名、密码与gitlabs上注册的用户名、密码不一致
@@ -340,7 +340,7 @@ git config --global credential.helper store
 # 'xxx' is owned by: 'xxx' but the current user is: 'xxx'
 -- 原因
 修改了文件所有者，Git项目所有者与当前用户不一致
--- 解决方案
+-- 解决方案(将当前用户的所有 Git 仓库的安全目录设置为当前用户的所有文件和目录，即忽略所有文件和目录)
 git config --global --add safe.directory "*"
 -- 上传成功后，可重新Clone到本地，再删除全部允许配置
 git config --global --unset safe.directory
@@ -1417,19 +1417,6 @@ yum -y install vim*
 ![image-20210306204644384](..\imgs\01\Website\Centos\image-20210306204644384.png)
 
 ### 常见问题
-
-#### [yum、apt-get 的区别](https://blog.csdn.net/mathewsking/article/details/8211273)
-
-```markdown
-# 【Linux包管理工具】基本上分为【两大类】
-1) 【RedHat】系列
-  包括 Redhat、Centos、Fedora 等
-  使用【rpm】包，命令是【rpm -参数】，包管理工具【yum】
-
-2) 【Debian】系列
-  包括 Debian、Ubuntu 等
-  使用【deb】包，命令是【dpkg -参数】，包管理工具【apt-get】
-```
 
 #### apt-get
 
