--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -728,6 +728,74 @@ package-private（没有修饰符）: 仅在自己的包中可见
 private: 仅在自己的类中可见
 ```
 
+### 反射问题
+
+```java
+private final int cycleNum = 10000000;
+
+private int calculate() {
+    return 1;
+}
+
+public void normalCal() {
+    for (int i = 0; i < cycleNum; i++) {
+        calculate();
+    }
+}
+
+public void reflectedCal() {
+    try {
+        for (int i = 0; i < cycleNum; i++) {
+            Method method = MybatisTest.class.getDeclaredMethod("calculate");
+            method.invoke(this);
+        }
+    } catch (NoSuchMethodException | InvocationTargetException | IllegalAccessException e) {
+        throw new RuntimeException(e);
+    }
+}
+
+public void reflectedCal2() {
+    try {
+        Method method = MybatisTest.class.getDeclaredMethod("calculate");
+        for (int i = 0; i < cycleNum; i++) {
+            method.invoke(this);
+        }
+    } catch (NoSuchMethodException | InvocationTargetException | IllegalAccessException e) {
+        throw new RuntimeException(e);
+    }
+}
+```
+
+| 循环次数 | 方法          | 耗时    |
+| -------- | ------------- | ------- |
+| cycleNum | normalCal     | 24 ms   |
+| cycleNum | reflectedCal  | 4716 ms |
+| cycleNum | reflectedCal2 | 964 ms  |
+
+```markdown
+# 由于上述只测试了[方法获取]和[方法调用]时[反射的性能]
+考虑到还有其他功能，取大致性能差距 (4716/2) / 24 = 98.25 ≈ 100 倍
+
+# 每次反射耗时
+4716/2/cycleNum = 0.0002358 ms
+
+# 按照[60~120 HZ]的[刷新率]
+[一帧耗时]在[8.3~16.7 ms]左右 (在一帧内做的所有事情加起来的耗时，不能超过这个数值，才能确保不掉帧)
+# 假设[一帧]内[所有时间]都让给[反射] 
+8.3/0.0002358 = 35199.321458863 ≈ 35200 (大约做 35200 次反射，会掉帧)
+# 当然不可能全留给反射，假设[10% 的时间]让给[反射]
+8.3/10/0.0002358 ≈ 3520 (大约做 3520 次反射，会掉帧)
+
+# 结论
+反射虽然慢，正常用也没关系；但是在[循环]或者[高频繁调用]的场景中，还是要注意使用
+
+# 注意
+以上是测试结果是在[API 33]环境下
+在 [API 19 & Dalvik(安卓 4.4 以下)、[API 18]、[API 15] 的环境下，反射性能分别下降 [20~300 倍]
+即便取 [100倍]，3520/100 = 35 次，还是很容易掉帧的
+在 [API 19 & ART(安卓 4.4 以上)] 的环境下，性能会提升4倍左右，所以高版本也可以适当的使用
+```
+
 ### JVM
 
 栈帧、操作数栈和局部变量表
@@ -6215,7 +6283,88 @@ C:\Users\Viski\AppData\Local\JetBrains\IntelliJIdeaxxx.x
 反斜杠 \	代表转义字符
 ```
 
+## [包管理工具](https://blog.csdn.net/mathewsking/article/details/8211273)
+
+### # RedHat 系列
+
+```markdown
+# Redhat、Centos、Fedora 等
+使用【rpm】包，命令是【rpm -参数】，包管理工具【yum】
+```
+
+### # Debian 系列
+
+```markdown
+#  Debian、Ubuntu 等
+使用【deb】包，命令是【dpkg -参数】，包管理工具【apt-get】
+```
+
+## 环境变量
+
+<a href="..\01_工具网站\常用网站.md# > 和 >> 的区别">echo 命令</a>
+
+```shell
+# 确定使用的 Shell
+echo $SHELL
+
+# /bin/bash
+表示使用的是 Bash
+适用于 大多数Linux发行版、登录Shell、macOS
+# /bin/zsh
+表示使用的是 Zsh
+适用于 Z-Shell、macOS(从 macOS Catalina 10.15 开始，默认使用 Zsh 作为系统 Shell)
+
+# [追加内容] 到 [环境变量]
+echo 'export PATH=$PATH:/python/v3.9.8/bin' >> /etc/profile
+echo -e '\n export PATH=$PATH:/python/v3.9.8/bin' >> ~/.bash_profile
+
+# 修改完成后，运行以下命令以使更改立即生效，而不必重新打开终端
+source /etc/profile
+```
+
+### # 全局配置
+
+| Shell 类型 | 全局配置文件                   | 加载时机                                       |
+| ---------- | ------------------------------ | ---------------------------------------------- |
+| Bash       | /etc/profile                   | 登录 Shell（例如通过终端或 SSH 登录时加载）    |
+|            | /etc/bash.bashrc（Linux 特有） | 非登录 Shell（例如新开一个 Bash 会话时加载）   |
+| Zsh        | /etc/zprofile（登录 Shell）    | 登录 Shell（类似 `/etc/profile` 的作用）       |
+|            | /etc/zshrc（非登录 Shell）     | 非登录 Shell（类似 `~/.bashrc` 的作用）        |
+|            | /etc/zshenv（所有 Zsh 会话）   | 无论登录与否都会加载（通常只用于全局环境变量） |
+| Dash       | /etc/profile                   | 登录 Shell（通常是 POSIX 兼容 Shell）          |
+| Ksh        | /etc/profile                   | 登录 Shell                                     |
+| Tcsh       | /etc/csh.cshrc                 | 每次启动 Tcsh 会话时加载（无论登录与否）       |
+|            | /etc/csh.login                 | 仅在登录 Shell 会话时加载                      |
+|            | /etc/csh.logout                | 用户退出登录会话时加载                         |
+
+### # 非全局配置
+
+| 加载时机 | 全局配置文件          | 加载时机                                    |
+| -------- | --------------------- | ------------------------------------------- |
+| Bash     | ~/.bash_profile       | 登录 Shell（优先加载此文件）                |
+|          | ~/.bash_login         | 登录 Shell（如果 `~/.bash_profile` 不存在） |
+|          | ~/.profile            | 登录 Shell（如果前两个文件都不存在时加载）  |
+|          | ~/.bashrc             | 非登录 Shell                                |
+| Zsh      | ~/.zshenv             | 每次启动 Zsh 时加载（无论登录与否）         |
+|          | ~/.zprofile           | 登录 Shell（类似于 `~/.bash_profile`）      |
+|          | ~/.zshrc              | 非登录 Shell                                |
+|          | ~/.zlogin             | 登录 Shell（在 `~/.zprofile` 之后加载）     |
+|          | ~/.zlogout            | 用户退出 Shell 会话时加载                   |
+| Dash     | ~/.profile            | 登录 Shell（没有更复杂的配置文件机制）      |
+| Ksh      | ~/.profile            | 登录 Shell                                  |
+| Tcsh     | ~/.tcshrc 或 ~/.cshrc | 每次 Tcsh 会话启动时加载                    |
+|          | ~/.login              | 登录 Shell                                  |
+|          | ~/.logout             | 用户退出 Shell 会话时加载                   |
+
 ## 常用命令
+
+```markdown
+# 重启网络服务
+service network restart
+
+# 重启虚拟机
+reboot
+```
 
 ### 查看和关闭进程
 
@@ -6270,82 +6419,34 @@ firewall-cmd --reload
 firewall-cmd --query-port=8848/tcp
 ```
 
-### 重启网络服务
+### 文件操作
+
+#### 权限设置
 
 ```markdown
-service network restart
+# 对应权限
+  -rw------- (600)		只有拥有者有读写权限
+  -rw-r--r-- (644)		只有拥有者有读写权限；而属组用户和其他用户只有读权限
+  -rw-rw-rw- (666)		所有用户都有文件读、写权限
+  -rwx------ (700)		只有拥有者有读、写、执行权限
+  -rwx--x--x (711)		拥有者有读、写、执行权限；而属组用户和其他用户只有执行权限
+  -rwxr-xr-x (755)		拥有者有读、写、执行权限；而属组用户和其他用户只有读、执行权限
+  -rwxrwxrwx (777)		所有用户都有读、写、执行权限
+
+# 授权命令
+chmod 666 文件名
+
+# -R 表示递归地修改目录或文件的权限
+chmod -R 777 目录名
 ```
 
-### 重启虚拟机
-
-```tex
-reboot
-```
-
-### 环境变量
-
-<a href="..\01_工具网站\常用网站.md# > 和 >> 的区别">echo 命令</a>
-
-```shell
-# 确定使用的 Shell
-echo $SHELL
-
-# /bin/bash
-表示使用的是 Bash
-适用于 大多数Linux发行版、登录Shell、macOS
-# /bin/zsh
-表示使用的是 Zsh
-适用于 Z-Shell、macOS(从 macOS Catalina 10.15 开始，默认使用 Zsh 作为系统 Shell)
-
-# [追加内容] 到 [环境变量]
-echo 'export PATH=$PATH:/python/v3.9.8/bin' >> /etc/profile
-echo -e '\n export PATH=$PATH:/python/v3.9.8/bin' >> ~/.bash_profile
-
-# 修改完成后，运行以下命令以使更改立即生效，而不必重新打开终端
-source /etc/profile
-```
-
-#### # 全局配置
-
-| Shell 类型 | 全局配置文件                   | 加载时机                                       |
-| ---------- | ------------------------------ | ---------------------------------------------- |
-| Bash       | /etc/profile                   | 登录 Shell（例如通过终端或 SSH 登录时加载）    |
-|            | /etc/bash.bashrc（Linux 特有） | 非登录 Shell（例如新开一个 Bash 会话时加载）   |
-| Zsh        | /etc/zprofile（登录 Shell）    | 登录 Shell（类似 `/etc/profile` 的作用）       |
-|            | /etc/zshrc（非登录 Shell）     | 非登录 Shell（类似 `~/.bashrc` 的作用）        |
-|            | /etc/zshenv（所有 Zsh 会话）   | 无论登录与否都会加载（通常只用于全局环境变量） |
-| Dash       | /etc/profile                   | 登录 Shell（通常是 POSIX 兼容 Shell）          |
-| Ksh        | /etc/profile                   | 登录 Shell                                     |
-| Tcsh       | /etc/csh.cshrc                 | 每次启动 Tcsh 会话时加载（无论登录与否）       |
-|            | /etc/csh.login                 | 仅在登录 Shell 会话时加载                      |
-|            | /etc/csh.logout                | 用户退出登录会话时加载                         |
-
-#### # 非全局配置
-
-| 加载时机 | 全局配置文件          | 加载时机                                    |
-| -------- | --------------------- | ------------------------------------------- |
-| Bash     | ~/.bash_profile       | 登录 Shell（优先加载此文件）                |
-|          | ~/.bash_login         | 登录 Shell（如果 `~/.bash_profile` 不存在） |
-|          | ~/.profile            | 登录 Shell（如果前两个文件都不存在时加载）  |
-|          | ~/.bashrc             | 非登录 Shell                                |
-| Zsh      | ~/.zshenv             | 每次启动 Zsh 时加载（无论登录与否）         |
-|          | ~/.zprofile           | 登录 Shell（类似于 `~/.bash_profile`）      |
-|          | ~/.zshrc              | 非登录 Shell                                |
-|          | ~/.zlogin             | 登录 Shell（在 `~/.zprofile` 之后加载）     |
-|          | ~/.zlogout            | 用户退出 Shell 会话时加载                   |
-| Dash     | ~/.profile            | 登录 Shell（没有更复杂的配置文件机制）      |
-| Ksh      | ~/.profile            | 登录 Shell                                  |
-| Tcsh     | ~/.tcshrc 或 ~/.cshrc | 每次 Tcsh 会话启动时加载                    |
-|          | ~/.login              | 登录 Shell                                  |
-|          | ~/.logout             | 用户退出 Shell 会话时加载                   |
-
-### 进入文件夹
+#### 进入文件夹
 
 ```tex
 cd /var/lib/docker/volumes
 ```
 
-### 列出文件详情
+#### 列出文件详情
 
 ```bash
 # ls --help
@@ -6355,13 +6456,13 @@ ls -l
 ls -lh
 ```
 
-### 列出当前路径
+#### 列出当前路径
 
 ```tex
 pwd
 ```
 
-### 查找文件位置
+#### 查找文件位置
 
 ```bash
 # 文件、文件夹
@@ -6388,27 +6489,6 @@ which mongod
 
 -- 方式3
 type mongod
-```
-
-### 文件操作
-
-#### 权限设置
-
-```markdown
-# 对应权限
-  -rw------- (600)		只有拥有者有读写权限
-  -rw-r--r-- (644)		只有拥有者有读写权限；而属组用户和其他用户只有读权限
-  -rw-rw-rw- (666)		所有用户都有文件读、写权限
-  -rwx------ (700)		只有拥有者有读、写、执行权限
-  -rwx--x--x (711)		拥有者有读、写、执行权限；而属组用户和其他用户只有执行权限
-  -rwxr-xr-x (755)		拥有者有读、写、执行权限；而属组用户和其他用户只有读、执行权限
-  -rwxrwxrwx (777)		所有用户都有读、写、执行权限
-
-# 授权命令
-chmod 666 文件名
-
-# -R 表示递归地修改目录或文件的权限
-chmod -R 777 目录名
 ```
 
 #### 外部操作
@@ -6513,6 +6593,7 @@ rm -rf /test/*data*
 # 修改文件
 -- 如：网卡配置文件
 vi /etc/sysconfig/network-scripts/ifcfg-ens33
+vim /etc/...
 ```
 
 #### vim快捷键
@@ -6623,6 +6704,60 @@ docker rmi -f nginx
 ```
 
 ### 操作容器
+
+创建实例参考：[安装Redis → 四、启动命令](../01_工具网站/常用网站.md#安装Redis)
+
+```shell
+# 查看redis容器日志
+docker logs redis
+# 若出现以下问题
+-- 打印
+Reading the configuration file, at line 343
+>>> 'set-proc-title yes'
+Bad directive or wrong number of arguments
+-- 原因
+Redis版本不支持set-proc-title这一配置参数
+-- 解决
+1) 去以下网址，下载对应版本的压缩包 或者 直接下载配置文件
+http://download.redis.io/releases
+https://redis.io/docs/latest/operate/oss_and_stack/management/config
+2) 删除容器
+docker stop redis
+docker rm -v redis
+或者
+docker rm -fv redis
+3) 重新创建一个实例，关联对应版本的redis.conf文件
+docker run --name redis xxx
+
+-- 打印
+Reading the configuration file, at line 171
+>>> 'logfile "/etc/redis/logs/6380.log"'
+Can't open the log file: No such file or directory
+-- 原因
+1) [redis.conf]指定的[logfile 路径] 与 [容器挂载]到[宿主机]上面的[路径不一致]
+2) [redis.conf]指定了[logfile 路径] 但 [没被容器挂载]到[宿主机]
+-- 解决
+1) 修改宿主机挂载配置
+vi /宿主机路径/redis.conf → 修改[logfile 路径]
+2) 复制宿主机目录到容器中
+cd /宿主机路径
+touch 6380.log
+docker cp -a /宿主机路径/logs 容器id:/etc/redis
+   或 删除容器，重新部署
+docker rm -fv redis
+docker run -d --name redis --restart=always -p 6379:6379 \
+-v /宿主机路径/redis.conf:/容器内部路径/redis.conf \
+-v /宿主机路径/data:/容器内部路径/data \
+-v /宿主机路径/logs:/etc/redis/logs \
+-d redis:x.x.x redis-server /容器内部路径/redis.conf \
+--appendonly yes
+```
+
+若出现以下问题
+
+```bash
+
+```
 
 #### 外部操作
 
@@ -6737,7 +6872,7 @@ docker exec -it 容器id bash
 date
 ```
 
-### 容器安装信息
+#### 容器安装信息
 
 ```markdown
 # 安装目录
@@ -6751,7 +6886,7 @@ docker inspect -f '{{.Mounts}}' mysql
 [{bind  /etc/localtime     /etc/localtime     ro false rprivate}]
 ```
 
-### [容器挂载信息](https://blog.csdn.net/weixin_46030885/article/details/128786505)
+#### [容器挂载信息](https://blog.csdn.net/weixin_46030885/article/details/128786505)
 
 ```markdown
 # 挂载目录
@@ -6761,7 +6896,7 @@ docker inspect --format "{{.Config.Volumes}}" 容器id/容器名
 docker inspect 容器id | grep Mounts -A 50
 ```
 
-### 容器IP
+#### 容器IP
 
 ```markdown
 # IPAddress
@@ -6771,7 +6906,7 @@ docker inspect --format '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}
 docker inspect 容器id/容器名
 ```
 
-### 删除容器
+#### 删除容器
 
 ```markdown
 # rm容器删除举例
@@ -6786,65 +6921,11 @@ docker rm -f db01 db02
 docker volume prune
 ```
 
-### 常见问题
+#### 常见问题
 
 ```bash
 # 容器无法启动，需要查看容器日志
 docker logs 容器id/容器名
-```
-
-#### Redis相关
-
-创建实例参考：[安装Redis → 四、启动命令](../01_工具网站/常用网站.md#安装Redis)
-
-查看redis容器日志
-```shell
-docker logs redis
-```
-
-若出现以下问题
-
-```bash
--- 打印
-Reading the configuration file, at line 343
->>> 'set-proc-title yes'
-Bad directive or wrong number of arguments
--- 原因
-Redis版本不支持set-proc-title这一配置参数
--- 解决
-1) 去以下网址，下载对应版本的压缩包 或者 直接下载配置文件
-http://download.redis.io/releases
-https://redis.io/docs/latest/operate/oss_and_stack/management/config
-2) 删除容器
-docker stop redis
-docker rm -v redis
-或者
-docker rm -fv redis
-3) 重新创建一个实例，关联对应版本的redis.conf文件
-docker run --name redis xxx
-
--- 打印
-Reading the configuration file, at line 171
->>> 'logfile "/etc/redis/logs/6380.log"'
-Can't open the log file: No such file or directory
--- 原因
-1) [redis.conf]指定的[logfile 路径] 与 [容器挂载]到[宿主机]上面的[路径不一致]
-2) [redis.conf]指定了[logfile 路径] 但 [没被容器挂载]到[宿主机]
--- 解决
-1) 修改宿主机挂载配置
-vi /宿主机路径/redis.conf → 修改[logfile 路径]
-2) 复制宿主机目录到容器中
-cd /宿主机路径
-touch 6380.log
-docker cp -a /宿主机路径/logs 容器id:/etc/redis
-   或 删除容器，重新部署
-docker rm -fv redis
-docker run -d --name redis --restart=always -p 6379:6379 \
--v /宿主机路径/redis.conf:/容器内部路径/redis.conf \
--v /宿主机路径/data:/容器内部路径/data \
--v /宿主机路径/logs:/etc/redis/logs \
--d redis:x.x.x redis-server /容器内部路径/redis.conf \
---appendonly yes
 ```
 
 ## vmware--tools
