--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -23,7 +23,7 @@ git config --global user.name "viskixin"
 git config --global user.email "2244255266@qq.com"
 # 查看配置是否OK
 git config --global --list
-# 配置详解
+# 配置详解(如果 config 添加并上传到了其他 remote)
   credential	是Git 的凭据管理功能，用于管理用户访问远程仓库的认证信息
   provider		指定了一个凭据提供程序，用于决定如何存储和处理认证信息
   generic		是通用提供程序，表示没有使用特定的提供程序（例如 wincred、osxkeychain 等），仅使用基础的凭据存储方式
@@ -76,21 +76,22 @@ git config user.password
 
 ```markdown
 # 方式1
-1) 在 Github 中 Create a new repository  假设[Repository name]为[ghtest]
+1) In Github [Create a new repository]	假设[Repository name]为[ghtest]
 2) git clone https://.../ghtest.git     克隆[远程仓库]到[本地文件夹]
-3) 进入 ghtest 目录					 添加需要上传的文件
-4) git add .						别忘记后面的. → 此操作是把[ghtest目录下]的[所有文件]都[添加进来]
-5) git commit -m "commit info"		版本跟踪成功之后，可用 -am 参数
-6) git push -u origin main			把[本地仓库]推送到[github]的[main分支]，首次需要输入帐号和密码
+3) cd ghtest							进入需要上传的文件夹
+4) git add .							别忘记后面的. → 此操作是把[ghtest目录下]的[所有文件]都[添加进来]
+5) git commit -m "commit info"			版本跟踪成功之后，可用 -am 参数
+6) git push -u origin main				把[本地仓库]推送到[github]的[main分支]，首次需要输入帐号和密码
 
 # 方式2
-1) 进入一个需要上传的文件夹  假设[文件夹名]是[demogh] → 对应[本地仓库]的[Repository name]为[demogh]
-2) git init								 把[demogh]变成[Git可管理的仓库]
-3) git add .							 把[demogh目录下]的[所有文件]都[添加到仓库]
-4) git commit -m "first commit"			 把[项目]提交到[仓库]
-5) 在 Github 中 Create a new repository	同步[Repository name]为[demogh]
-6) git remote add origin https://.../demogh.git  [Git仓库]关联[本地仓库]
-7) git push -u origin master  把[本地库]的[所有内容]推送到[远程仓库]
+1) In Github [Create a new repository]				假设[Repository name]为[demogh]
+2) cd demogh										进入需要上传的文件夹
+3) git init											把[demogh]变成[Git可管理的仓库]
+4) git add .										把[demogh目录下]的[所有文件]都[添加到仓库]
+5) git commit -m "first commit"						把[项目]提交到[仓库]
+6) git remote add origin https://.../demogh.git		[Git仓库]关联[本地仓库]
+7) git branch -m master								指定[主分支]为[master] → 也可省略，直接执行步骤8
+8) git push -u origin master						把[本地库]的[所有内容]推送到[远程仓库]
    -- 远程仓库是空的，所以要加上-u这个参数，等远程仓库里面有了内容之后，可直接如下执行
       git push origin master
    -- 若出现 error: failed to push some refs to ...，可以通过以下命令先将内容合并
@@ -481,7 +482,7 @@ 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
 
 ![image-20241203224003396](..\imgs\01\Website\Git\Gitee\image-20241203224003396.png)
 
-3. 修改 Git 的配置文件
+3. 修改 [.git 文件夹] 下的 [config 配置文件]
 
 ```markdown
 # 添加 remote 地址，如下：
