--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -23,7 +23,7 @@ git config --global user.name "viskixin"
 git config --global user.email "2244255266@qq.com"
 # 查看配置是否OK
 git config --global --list
-# 配置详解(如果 config 添加并上传到了其他 remote)
+★ 配置详解(如果 config 添加并上传到了其他 remote)
   credential	是Git 的凭据管理功能，用于管理用户访问远程仓库的认证信息
   provider		指定了一个凭据提供程序，用于决定如何存储和处理认证信息
   generic		是通用提供程序，表示没有使用特定的提供程序（例如 wincred、osxkeychain 等），仅使用基础的凭据存储方式
@@ -33,10 +33,10 @@ credential.https://gitee.com.provider=generic
   store					表示将认证信息（如用户名和密码）以纯文本的形式存储在用户目录下的 ~/.git-credentials 文件中
 credential.helper=store
 作用：告诉 Git 使用 store 模式的凭据助手来保存认证信息
-# 取消配置
+★ 取消配置
 git config --global --unset credential.https://gitee.com.provider
 git config --global --unset credential.helper
-# 使用 wincred 来存储 GitHub 凭据(Windows命令)
+★ 使用 wincred 来存储 GitHub 凭据(Windows命令)
 git config --global credential.helper wincred
 
 # 生成ssh
@@ -338,6 +338,12 @@ git config --global credential.helper store
 	   进入控制面板→用户账户→管理你的凭据→windows凭据→普通凭据
 	   在里面找到git，点击(向下的箭头图标)展开→编辑；将密码更新为最新的，之后就可以正常操作了
 
+# libpng warning: iCCP: known incorrect sRGB profile
+git credential-helper-selector
+   <no helper>
+   wincred
+[√]manager
+
 # 'xxx' is owned by: 'xxx' but the current user is: 'xxx'
 -- 原因
 修改了文件所有者，Git项目所有者与当前用户不一致
@@ -357,6 +363,33 @@ https://github.com/practical-tutorials/project-based-learning
 
 # Apache 资源
 https://github.com/apache
+```
+
+### # 个人令牌
+
+```markdown
+# 创建步骤
+Settings | Developer Settings | Personal access tokens | Fine-grained tokens | Generate new token
+# 创建完要立刻 Copy，之后就看不到了
+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
+# 错过了 Copy，可以重新生成
+Regenerate token
+
+# Tokens (classic)
+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
+```
+
+### # 账号密码
+
+```markdown
+登录方式1：
+    邮箱：2244255266@qq.com
+登录方式2：
+    邮箱：outtaame@gmail.com
+登录方式3：
+    用户名：viskixin
+密码：
+	what.0414
 ```
 
 ### # 常见问题
@@ -420,33 +453,6 @@ eclipse.ini文件，在文件的最后添加指令：
 -Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2
 ```
 
-### # 个人令牌
-
-```markdown
-# 创建步骤
-Settings | Developer Settings | Personal access tokens | Fine-grained tokens | Generate new token
-# 创建完要立刻 Copy，之后就看不到了
-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
-# 错过了 Copy，可以重新生成
-Regenerate token
-
-# Tokens (classic)
-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
-```
-
-### # 账号密码
-
-```markdown
-登录方式1：
-    邮箱：2244255266@qq.com
-登录方式2：
-    邮箱：outtaame@gmail.com
-登录方式3：
-    用户名：viskixin
-密码：
-	what.0414
-```
-
 ## [【Gitee】官网](https://gitee.com)
 
 ### # 账号密码
@@ -457,7 +463,7 @@ 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
 登录方式2：
 	手机号：18790475656
 登录方式3：
-	微信授权登录
+	用户名：simpleway
 密码：
 	what.0414
 ```
