--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -394,34 +394,18 @@ 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
 
 ### # 常见问题
 
-#### * 不允许 RSA key
-
 ```markdown
-# You‘re using an RSA key with SHA-1, which is no longer allowed
+# You‘re using an RSA key with SHA-1, which is no longer allowed  →  不允许 RSA key
 https://blog.csdn.net/Mr_kanger/article/details/123741702
 https://blog.csdn.net/lishuangquan1987/article/details/123588802
-```
-
-新加密方式
-
-```bash
+# 新加密方式
 ssh-keygen -t ed25519 -C "your_email"
 注意：删除 id_rsa、id_rsa.pub 文件
-```
 
-#### * ping github.com 超时
-
-```tex
+# ping github.com 超时
 http://t.zoukankan.com/xuexianqi-p-13219719.html
 https://blog.csdn.net/baiyan3212/article/details/84947403
-```
-
-```tex
-C:\Windows\System32\drivers\etc → 找到 hosts.txt → 添加以下代码
-```
-
-```markdown
-# github
+# 找到 hosts.txt → 添加以下代码  →  C:\Windows\System32\drivers\etc
 192.30.255.112 github.com git
 185.31.16.184 github.global.ssl.fastly.net
 192.30.253.113 github.com
@@ -430,24 +414,19 @@ C:\Windows\System32\drivers\etc → 找到 hosts.txt → 添加以下代码
 173.194.127.200 groups.google.com
 185.31.16.185 github.global.ssl.fastly.net
 74.125.128.95 ajax.googleapis.com
-```
 
-#### * [Eclipse-Git](https://blog.51cto.com/u_16213632/10825211)
-
-```markdown
+# Eclipse-Git
+https://blog.51cto.com/u_16213632/10825211
 # eclipse中Git的使用
 https://blog.csdn.net/2301_76348171/article/details/137242557
-```
 
-#### * [git: cannot open git-upload-pack](https://blog.csdn.net/DylanTian/article/details/80685312)
-
-```markdown
+# git: cannot open git-upload-pack
+https://blog.csdn.net/DylanTian/article/details/80685312
 # 打开eclipse中的
 windows → Preferences → Team → Git → Configuration → User Settings
 然后点 Add Entry 新建一个键值对
 Key:	http.ssl
 Value:	Verify=false
-
 # 然后在eclipse安装目录下找到
 eclipse.ini文件，在文件的最后添加指令：
 -Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2
@@ -459,7 +438,7 @@ eclipse.ini文件，在文件的最后添加指令：
 
 ```markdown
 登录方式1：
-    账号：outta_touch@163.com
+    邮箱：outta_touch@163.com
 登录方式2：
 	手机号：18790475656
 登录方式3：
@@ -505,6 +484,63 @@ Gitee 与本地的 Git 分支为 master
 ```
 
 ![image-20241204001128532](..\imgs\01\Website\Git\Gitee\image-20241204001128532.png)
+
+## [【Gitea】官网](https://gitea.com)
+
+### # 账号密码
+
+```markdown
+登录方式1：
+    邮箱：outta_touch@163.com
+登录方式2：
+    邮箱：outtaame@gmail.com
+登录方式3：
+    用户名：outta
+密码：
+	Simple.0121
+```
+
+### # 常见问题
+
+```markdown
+# 假设当前 remote 被其他配置关联 (如：GitCode 的 config 配置了 https://gitea.com/.../xxx.git)
+则会弹出授权窗口(需要先登录账户)，如下
+授权 Git Credential Manager 访问您的帐户？
+如果您允许，它将能够读取和修改您的所有帐户信息，包括私人仓库和组织。
+此应用由Gitea: Git with a cup of tea创建。
+点击 [应用授权]
+```
+
+## [【GitCode】官网](https://gitcode.com)
+
+### # 访问令牌
+
+```markdown
+# into
+fxW14yxZaqWmRTdrLWy_8Jfb
+```
+
+### # 账号密码
+
+```markdown
+登录方式1：
+    邮箱：2244255266@qq.com
+登录方式2：
+    邮箱：outta_touch@163.com
+登录方式2：
+    用户名：qq_41519754
+密码：
+	Simple.0121
+```
+
+### # 常见问题
+
+```markdown
+# The password-based authentication of Git has been removed. Please use your personal access token instead of the password.  →  不再支持基于密码的认证，要求使用 Personal Access Token (PAT)
+git remote set-url origin https://qq_41519754:fxW14yxZaqWmRTdrLWy_8Jfb@gitcode.com/qq_41519754/AnnoMark.git
+# 不想每次输入 Token，可以配置 Git 凭据存储
+git config --global credential.helper store
+```
 
 ## [【TortoiseSVN】官网](https://tortoisesvn.net)
 
