--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -3140,7 +3140,7 @@ https://www.cloudflare.com
 
 ```markdown
 # 选择免费计划
-点击[左上角]CLOUDFLARE[图标] | 登录 | Zero Trust | Settings | Account → Plan → Free → 输入团队名称(viski) → Proceed to payment
+点击左上角[CLOUDFLARE(图标)] | Zero Trust | Settings | Account → Plan → Free → 输入团队名称(viski) → Proceed to payment
 
 # 登录策略
 1) 创建设备注册规则
@@ -3150,6 +3150,18 @@ Settings | WARP Client | Device enrollment permissions → Manage | Policies →
   [Value]			@qq.com
 2) 更换临时账户
 打开 Cloudflare WARP → 偏好设置 → 账户 使用 Cloudflare Zero Trust 登录 → 输入团队名称(viski) → 确定 → 页面验证
+```
+
+### 账户名&域名
+
+```markdown
+# 修改账户名
+Account Home | 账户名右侧[┇] → Change account name
+或者
+Manage Account | Configurations | Preferences | Account name → Change name
+
+# 修改域名
+Workers & Pages | Subdomain → 输入[新子域名] → Continue
 ```
 
 ### [Workers部署](https://z008.blogspot.com/2024/03/2CJD.html)
