--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -2121,6 +2121,17 @@ SELECT IFNULL(MIN(col), 0) FROM tb WHERE ...;
 update tb set col = replace(replace(col, char(10), ''), char(13), '');
 ```
 
+## 4个基本特性
+
+```markdown
+# ACID
+原子性(atomicity)		事务作为一个整体被执行，包含在其中的对数据库的操作要么全部被执行，要么都不执行
+一致性(consistency)	事务应确保数据库的状态从一个一致状态转变为另一个一致状态
+					  一致状态的含义是：数据库中的数据应满足完整性约束(如转账，账户余额改变，但总额不变)
+隔离性(isolation)		多个事务并发执行时，一个事务的执行不应影响其他事务的执行
+持久性(durability)		已被提交的事务对数据库的修改应该是永久性的
+```
+
 ## [连接驱动](https://www.cnblogs.com/qubo520/p/8483595.html)
 
 ```tex
@@ -6417,6 +6428,9 @@ firewall-cmd --zone=public --add-port=8848-8850/tcp --permanent
 firewall-cmd --reload
 3) 查询端口是否打开
 firewall-cmd --query-port=8848/tcp
+
+# 检查防火墙设置
+iptables -L -n
 ```
 
 ### 文件操作
