--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -1572,9 +1572,11 @@ File | Settings | Plugins → ⚙ | HTTP Proxy Settings...
 2) 在VM options中添加 -Dfile.encoding=UTF-8
 ```
 
-#### * [Command line is too long. Shorten command line for className](https://blog.csdn.net/qq_40682764/article/details/109215368)
+#### * [项目的指令过长](https://blog.csdn.net/qq_40682764/article/details/109215368)
 
 ```markdown
+# 提示
+Command line is too long. Shorten command line for className
 # 解决方法
 run → edit configurations → 项目 → configuration → Environment → Shorten command line
 → 选择 classpath file 或者 jar manifest
@@ -1583,14 +1585,14 @@ run → edit configurations → 项目 → configuration → Environment → Sho
 #### * NestedIOException
 
 ```markdown
+# 提示
 Caused by: org.springframework.core.NestedIOException: 
 Failed to parse mapping resource: 'URL [jar:file:C:/.../WEB-INF/lib/xxx.jar!/.../xxx.xml]'
-
 # 解决方法
 target → 项目 → WEB-INF → lib → 找到并删除重复的jar包
 ```
 
-#### * 一直处于Process Running
+#### * 一直 Process Running
 
 ```tex
 1) 设置maven的配置
@@ -1607,6 +1609,23 @@ target → 项目 → WEB-INF → lib → 找到并删除重复的jar包
 进入安装目录的\bin\idea.bat，在文件最后加 pause，双击idea.bat就会出现启动的一些信息（含报错信息）
 2) IDE has not been initialized yet
 有idea相关进程没有完全关闭（杀死），用任务管理器关闭即可
+```
+
+### # IDEA-常见提示
+
+#### * [webstorm 性能优化](https://blog.csdn.net/iutstar/article/details/142955379)
+
+```markdown
+# 提示
+Microsoft Defender configuration
+The IDE has detected Microsoft Defender with Real-Time Protection enabled. It might severely degrade IDE performance. It is recommended to add the following paths to the Defender folder exclusion list
+# 解决方法
+点击 Automatically 进行排除(以管理员身份打开idea)
+# Setting
+File | Settings | Appearance & Behavior | Notifications → Microsoft Defender configuration
+# Windows
+[Win + i] | 隐私与安全性 | Windows安全中心 | 病毒和威胁防护 → “病毒和威胁防护”设置 → 管理设置 
+| 排除项 → 添加或册删除排除项 | 添加排除项 → 文件夹
 ```
 
 ## 【Pycharm】Python工具
