--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -268,6 +268,8 @@ code --extensions-dir "E:\DevDoc\vscode\extensions"
 									  Alt + Shift + F → 格式化全文
 									  Ctrl + F 、Ctrl + K → 格式化选中代码
 
+Rainbow CSV							CSV、TSV 文件编辑
+
 Beautify							格式化代码(不再维护，已弃用)
 
 Bracket Pair Colorizer 2			给括号加上不同的颜色，便于区分不同的区块(已内置)
