--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -135,6 +135,12 @@ git diff
 
 # 检查是否有需要提交的变更(包括新文件和修改过的文件)
 git status -s
+# 若执行完 git add . 查看变更依然显示如下
+$ git status -s
+ m IdeaDoc/IdeaProjects/class121_spring2/day10_spring_git
+ m IdeaDoc/IdeaProjects/project1-combat/my-tanhua
+# 原因
+子路径下，有独立的 Git 项目时，父仓库不会直接跟踪它们的内容
 
 # 查看提交历史的变化
 git log --stat
@@ -1751,7 +1757,7 @@ g++ hello.cpp -o hello -shared
 
 ### # 扩展
 
-#### * [.h] [.c ] [.cpp] [.o] [.exe]
+#### [.h] [.c ] [.cpp] [.o] [.exe]
 
 ```markdown
 # 它们之间的关系如下：
@@ -1770,21 +1776,21 @@ g++ hello.cpp -o hello -shared
 1) .c
 [编译]
 gcc -c myprogram.c -o myprogram.o
-[链接]
+[连接]
   -- Linux
   gcc -o myprogram myprogram.o
   -- Windows
   gcc -o myprogram.exe myprogram.o
-[编译和链接]
+[编译和连接]
 gcc -o myprogram myprogram.c
 [运行]
 .\myprogram
 2) .cpp
-[编译和链接]
+[编译和连接]
 g++ -o myprogram myprogram.cpp
 ```
 
-#### * [创建并使用动态库dll](https://blog.csdn.net/qq_40569221/article/details/129815336)
+#### [创建并使用动态库dll](https://blog.csdn.net/qq_40569221/article/details/129815336)
 
 ```tex
 1) 创建源文件hello.cpp
@@ -1810,6 +1816,9 @@ int helloworld();
 -o 参数：指定输出文件
 g++ -c hello.cpp -o hello.o
 g++ hello.o -o hello.dll -shared
+[编译和连接]
+g++ hello.cpp -o hello.dll -shared
+gcc hello.cpp -lstdc++ -o hello.dll -shared
 
 4) 动态库的引用，创建main.c
 #include <stdio.h>
@@ -1829,37 +1838,47 @@ g++ main.o -L. -lhello -o main.exe
 .\main.exe
 ```
 
-#### * [java native 方法编写](https://blog.csdn.net/SHELLCODE_8BIT/article/details/130283726)
+#### <> 和 ""
+
+```tex
+#include <jni.h>
+使用尖括号时，编译器会在[标准库路径]或[系统路径]中[查找头文件]
+这些路径通常由[编译器的配置]或[环境变量](如 C_INCLUDE_PATH、CPLUS_INCLUDE_PATH、INCLUDE)指定
+
+#include "jni.h"
+使用双引号时，编译器会[首先]在[当前文件]的目录(即源文件所在的目录)中[查找头文件]
+[找不到]然后[再]按照[标准库路径]或[系统路径]查找
+```
+
+#### [java native 方法编写](https://blog.csdn.net/SHELLCODE_8BIT/article/details/130283726)
 
 ```markdown
-1) 编译Java文件
-jdk 9 以下版本
-  javac NativeTest.java
-  javah -jni NativeTest
-jdk 9 以上版本 ("." 表示在当前目录下生成头文件)
-  javac -h . NativeTest.java
-执行完成后在当前目录下就会生成一个 root_demo_natives_NativeTest.h 的头文件
-  头文件的命名规则是：java 的包名连接上 java 类名，就是  packageName_className.h 
-Java 代码如下
+0) Java 代码如下
 public class NativeTest {
     public native static void  Hello(String cmd);
 }
+1) 编译 Java文件
+  javac NativeTest.java
+   生成 头文件
+  javah -jni NativeTest (jdk 9 以下版本)
+  javac -h . NativeTest.java (jdk 9 以上版本；"." 表示在当前目录下生成头文件)
+执行完成后在当前目录下就会生成一个 rootdir_demo_natives_NativeTest.h 的头文件
+  头文件的命名规则是 [java包名] 连接上 [java类名] 加上 [.h] → packageName_className.h
 2) 创建动态链接库项目
 创建 c/c++ 项目，将以下文件复制到这个项目中：
-  root_demo_natives_NativeTest.h
+  rootdir_demo_natives_NativeTest.h
   jdk\include\jni.h
   jdk\include\win32\jni_md.h
-将 root_demo_natives_NativeTest.h 中引入的 <jni.h> 改成 "jni.h"
-创建一个 cpp 文件，引入 root_demo_natives_NativeTest.h 头文件
-  如 root_demo_natives_NativeTest.cpp
-在这个 cpp 文件中编写 java native 方法的方法体
-    #include "root_demo_natives_NativeTest.h"
+将 rootdir_demo_natives_NativeTest.h 中引入的 <jni.h> 改成 "jni.h"
+创建一个 cpp 文件，引入 rootdir_demo_natives_NativeTest.h 头文件
+如 rootdir_demo_natives_NativeTest.cpp；在这个 cpp 文件中编写 java native 方法的方法体
+    #include "rootdir_demo_natives_NativeTest.h"
     #include <iostream>
     #include <stdlib.h>
     #include <process.h>
     using namespace std;
 
-    JNIEXPORT void JNICALL Java_root_demo_natives_NativeTest_Hello
+    JNIEXPORT void JNICALL Java_rootdir_demo_natives_NativeTest_Hello
     (JNIEnv *env, jclass cls, jstring jstr){
         const char *cstr = (*env).GetStringUTFChars(jstr, NULL);
         if (cstr == NULL) {
@@ -1870,16 +1889,19 @@ public class NativeTest {
         (*env).ReleaseStringUTFChars(jstr, cstr);
     }
 3) 创建 dll文件
-g++ root_demo_natives_NativeTest.cpp -o root_demo_natives_NativeTest.dll -shared
-gcc root_demo_natives_NativeTest.cpp -lstdc++ -o root_demo_natives_NativeTest.dll -shared
+g++ rootdir_demo_natives_NativeTest.cpp -o rootdir_demo_natives_NativeTest.dll -shared
+gcc rootdir_demo_natives_NativeTest.cpp -lstdc++ -o rootdir_demo_natives_NativeTest.dll -shared
 4) Java中 加载 dll文件
-System.load("D:/DevSpace/VsCodeDoc/demo/test/c++/natives/root_demo_natives_NativeTest.dll");
-给它传入一个参数，让它打开计算器
+System.load("D:/DevSpace/VsCodeDoc/demo/test/c_plus/natives/rootdir_demo_natives_NativeTest.dll");
+5) 给它传入一个参数，让它打开计算器
+Hello("calc");
+
+# 如下所示
 public class NativeTest {
     public native static void  Hello(String cmd);
 
     public static void main(String[] args) {
-        System.load("D:/DevSpace/VsCodeDoc/demo/test/c++/natives/root_demo_natives_NativeTest.dll");
+        System.load("D:/DevSpace/VsCodeDoc/demo/test/c_plus/natives/rootdir_demo_natives_NativeTest.dll");
         Hello("calc");
     }
 }
