--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -970,6 +970,28 @@ java 类
 -- 方案2
 创建与[包名]同样结构的[文件目录]，并进入[文件目录]的[上级文件夹]执行命令
 java 包名.类
+★例如: JDKFeature.class 文件在以下目录
+D:\DevSpace\IdeaDoc\IdeaDaily\daily_practice\java-test\target\classes\common\new_feature\JDKFeature.class
+cd D:\DevSpace\IdeaDoc\IdeaDaily\daily_practice\java-test\target\classes
+java common.new_feature.JDKFeature
+
+# 报错
+Exception in thread "main" java.lang.UnsupportedClassVersionError: xxx/... has been compiled by a more recent version of the Java Runtime (class file version xx.xxx), this version of the Java Runtime only recognizes class file versions up to xx.x
+# JVM无法识别由更高版本JDK编译的类文件 → 查看当前环境变量的JDK版本 是否对应 编译Java文件的JDK版本
+java -version
+
+# 报错
+java.lang.UnsupportedClassVersionError: Preview features are not enabled for xxx/... (class file version xx.xxx). Try running with '--enable-preview'
+# 启动时，添加新特性参数
+java --enable-preview xxx.xxx
+★例如
+java --enable-preview common.new_feature.JDKFeature
+
+# 显示
+错误: 无法初始化主类 common.new_feature.JDKFeature
+原因: java.lang.NoClassDefFoundError: cn/hutool/core/date/Week
+# 添加所依赖[hutool jar包]的[文件路径]
+java --enable-preview -cp "D:\DevSpace\IdeaDoc\IdeaDaily\daily_practice\java-test\target\classes;E:\DevDoc\maven\repository\cn\hutool\hutool-core\5.7.12\hutool-core-5.7.12.jar" common.new_feature.JDKFeature
 ```
 
 # Spring使用
