--- a/账密文档/账户及密码.md
+++ b/账密文档/账户及密码.md
@@ -435,12 +435,16 @@ https://github.com/viskixin/MainDoc.git
 /* 01_工具网站 */
  -- [常用工具.md]  →  开发工具、浏览器
  -- [常用网站.md]  →  开发网站、VPN
+
+https://github.com/viskixin/DevSpace.git
+ -- [IdeaDoc]  →  Java文件
 ```
 
 ## [Gitee](https://gitee.com)
 
 ```markdown
 https://gitee.com/simpleway/MainDoc.git
+https://gitee.com/simpleway/DevSpace.git
 ```
 
 ## [Git操作](../应用文档/01_工具网站/常用网站.md/## 分支操作)
@@ -455,3 +459,29 @@ git add .
 git commit -m "Y2024M12D04"
 git push
 ```
+
+## config配置
+
+```markdown
+# MainDoc
+[remote "origin"]
+	# Gitee 地址
+	url = https://gitee.com/simpleway/MainDoc.git
+	# GitHub 地址
+	url = https://github.com/viskixin/MainDoc.git
+
+# DevSpace
+[remote "origin"]
+	# Gitee 地址
+	url = https://gitee.com/simpleway/DevSpace.git
+	# GitHub 地址
+	url = https://github.com/viskixin/DevSpace.git
+
+# AnnoMark
+[remote "origin"]
+	# GitCode 地址
+	url = https://qq_41519754:fxW14yxZaqWmRTdrLWy_8Jfb@gitcode.com/qq_41519754/AnnoMark.git
+	# Gitea 地址
+	url = https://gitea.com/outta/AnnoMark.git
+```
+
