--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -1722,17 +1722,102 @@ https://www.jetbrains.com
 
 ## 【C/C++】编译器
 
+```markdown
+# 注意
+GCC 与 gcc、g++ 是不同概念
+
+# GCC
+GNU Compiler Collection(GUN 编译器集合)
+# gcc
+是GCC中的 GUN C Compiler(C 编译器)
+# g++
+是GCC中的 GUN C++ Compiler(C++编译器)
+```
+
 ### # 环境搭建
 
 ```markdown
-# 目前 C/C++/... 常用的编译器有 GCC、Clang、Microsoft Visual C++ 等
+# 目前 C/C++/... 常用的编译器
+GCC (一般运行环境为 Linux)
+MinGW/TDM-GCC (GCC 的 Windows移植版本)
+MSVC
+Clang
+......
+```
 
-# GCC 网址
-https://www.mingw-w64.org
+### # [GCC官网](https://gcc.gnu.org)
 
-# GCC环境搭建
-https://blog.csdn.net/jad5620/article/details/127989761
-https://blog.csdn.net/YoyoHuzeyou/article/details/132502348
+[使用方法](https://blog.csdn.net/zzy979481894/article/details/122773500)
+
+```markdown
+# Releases
+https://gcc.gnu.org/releases.html
+
+# GCC编译器在编译C代码时需要经过以下4个步骤
+-- 预处理(preprocessing)
+对[.c]源文件进行预处理(头文件展开和宏替换)，生成[.i]文件
+-- 编译(compilation)
+对[.i]文件进行编译，生成[.s]汇编文件
+-- 汇编(assembly)
+对[.s]文件进行汇编，生成[.o]目标文件
+-- 链接(linking)
+将[.o]文件与库文件进行链接，生成[可执行]文件
+```
+
+### # [MinGW 网址](https://www.mingw-w64.org)
+
+[参考1](https://blog.csdn.net/jad5620/article/details/127989761) | [参考2](https://blog.csdn.net/YoyoHuzeyou/article/details/132502348)
+
+```markdown
+# 下载地址
+https://www.mingw-w64.org/downloads
+# MinGW-W64-builds
+x86_64-14.2.0-release-posix-seh-msvcrt-rt_v12-rev0.7z
+# Tarballs for the mingw-w64 sources are hosted on SourceForge
+Home | Toolchains targetting Win64 | Personal Builds | mingw-builds | 8.1.0 | threads-posix | seh 
+→ x86_64-8.1.0-release-win32-seh-rt_v6-rev0.7z
+
+# 说明
+Minimalist GNU for Windows
+```
+
+### # [TDM-GCC 网址](https://jmeubank.github.io/tdm-gcc)
+
+```markdown
+# 下载地址
+https://jmeubank.github.io/tdm-gcc/download
+# installer
+tdm64-gcc-10.3.0-2.exe
+
+# 注意
+安装时，[√]Add to PATH，可自动添加系统路径，其余的可据需求勾选，默认全选
+```
+
+### # [MSVC 官网](https://learn.microsoft.com/en-us/cpp/?view=msvc-170)
+
+[官网了解1](https://learn.microsoft.com/en-us/cpp/build/vscpp-step-0-installation?view=msvc-170) | [官网了解2](https://learn.microsoft.com/en-us/cpp/get-started/tutorial-console-cpp?view=msvc-170) | [官网了解3](https://learn.microsoft.com/en-us/cpp/windows/walkthrough-creating-windows-desktop-applications-cpp?view=msvc-170)
+
+```markdown
+# 下载地址
+https://visualstudio.microsoft.com/downloads
+
+# 说明
+Microsoft Visual C++
+对于一般的应用场景来说，不需要下载完整的IDE，只需要下载单个组件下的MSVC C++ 生成工具，以及Windows 10 SDK
+```
+
+### # [Clang 网址](https://clang.llvm.org)
+
+[了解地址1](https://zhuanlan.zhihu.com/p/380290758) | [了解地址2](https://blog.csdn.net/qq_33919450/article/details/130911617)
+
+```markdown
+# 下载地址
+https://releases.llvm.org/download.html
+# These are available on the GitHub release page
+LLVM-18.1.8-win64.exe
+
+# 说明
+在windows下Clang指令只是负责编译的前端工作，即识别编译指令，与提供报错提示。并不负责具体的代码编译工作，所以在windows下光安装llvm是不够的，还需要有实际的编译链接库，例如安装MinGW或者MSVC来获取需要的运行库
 ```
 
 ### # 常见问题
